added image to docs

--- a/user-docs/user-documentation.html
+++ b/user-docs/user-documentation.html
@@ -212,7 +212,7 @@ for the JavaScript code in this tag.
 <li><a href="#sec-3-2">3.2 Transform Labs in Collaborator Framework (Amrita Format)</a>
 <ul>
 <li><a href="#sec-3-2-1">3.2.1 Instructions for using scripts</a></li>
-<li><a href="#sec-3-2-2">3.2.2 Observe the UI transfer(mapping)</a></li>
+<li><a href="#sec-3-2-2">3.2.2 Observe the UI transfer (mapping)</a></li>
 </ul>
 </li>
 </ul>
@@ -507,13 +507,13 @@ images at each tab may be missing. It may be like this:
 </div>
 
 <div id="outline-container-3-2-2" class="outline-4">
-<h4 id="sec-3-2-2"><span class="section-number-4">3.2.2</span> Observe the UI transfer(mapping)</h4>
+<h4 id="sec-3-2-2"><span class="section-number-4">3.2.2</span> Observe the UI transfer (mapping)</h4>
 <div class="outline-text-4" id="text-3-2-2">
 
 <p>This is how the lab is structured after conversion.
 </p>
 <p>
-<img src="images/screenshot1.png"  alt="images/screenshot1.png" />  
+<img src="images/screenshot2.jpg"  alt="images/screenshot2.jpg" />  
 </p>
 
 
